--- a/src/markdown/arabic/4. Brainwashing.md
+++ b/src/markdown/arabic/4. Brainwashing.md
@@ -1,35 +1,35 @@
-قبل أن يمكنك الكذب على شخص آخر ، يجب عليك أن تكذب على نفسك.
+يجب عليك أن تكذب على نفسك قبل أن تكذب على شخص آخر.
 
-يعد غسيل دماغ الإباحية السبب الرئيسي لفشل من يحاولون مغادرتها إلى الأبد. غسل الدماغ هو الفكرة الراسخة بأن الإباحية توفر فائدة للمستخدم. وأيضًا فكرة أنه يحق للمستخدم ممارسة الجنس أو الإباحية وأن الجنس يجب أن يكون الهدف الأعلى في حياتك. هذا هو غسل الدماغ.
+يعد غسل دماغ الإباحية السبب الرئيسي لفشل من يحاولون مغادرتها إلى الأبد. غسل الدماغ هو الفكرة الراسخة بأن الإباحية توفر فائدة للمستخدم. وأيضًا فكرة أنه يحق للمستخدم ممارسة الجنس أو الإباحية وأن الجنس يجب أن يكون الهدف الأعلى في حياتك. هذا هو غسل الدماغ.
 
-إن الأمر متعلق بتربيتنا في المجتمع ، ومعزز بغسيل الدماغ الناتج عن الإدمان ، بالإضافة إلى أقوى التأثيرات - أصدقائنا وأقاربنا وزملائنا. عبارة "ترك" أو "أقلاع" هي مثال كلاسيكي على غسل الدماغ ، مما يعني التضحية الحقيقية. الحقيقة الجميلة أنه لا يوجد شيء للتخلي عنه. على العكس ، أنت تواجه الحرية. يتطلب الأمر درجة من التناقض لقول ، "كلا. سأفعل ما أريد". هذه هي شجاعة.
+إن الأمر متعلق بتربيتنا في المجتمع ، ومعزز بغسل الدماغ الناتج عن الإدمان ، بالإضافة إلى أقوى التأثيرات - أصدقائنا وأقاربنا وزملائنا. عبارة "ترك" أو "أقلاع" هي مثال كلاسيكي على غسل الدماغ ، مما يعني التضحية الحقيقية. الحقيقة الجميلة أنه لا يوجد شيء للتخلي عنه. على العكس ، أنت أمام الحرية. يتطلب الأمر مواجهة الرأي العام وقول ، "كلا. سأفعل ما اشاء". هذه هي شجاعة.
 
-ومن المضحك أن أعظم مسبب في هذا التشتت هو المستخدم بنفسه. من الخطأ أن نتدعي أن مستخدمي الإباحية هم ضعاف الإرادة أو ضعفاء جسديًا. ربما يكون الجانب الأكثر حزنًا في مشاهدة المستخدمين للإباحية هو أنهم يرون أنفسهم على أنهم خاسرون وفاشلون وانطوائيون لا يطاقون. قد يكون المستخدم شخصاً أكثر إثارة للاهتمام إذا لم يحبط نفسه من خلال إهدار طاقته في الإباحية.
+ومن المضحك أن أعظم أسباب هذا التشتت هو المستخدم نفسه. من الخطأ أن ندّعي أن مستخدمي الإباحية هم ضعاف الإرادة أو الجسد. ربما يكون الجانب الأكثر حزنًا في مشاهدة مستخدمين اللإباحية هو أنهم يرون أنفسهم على أنهم خاسرون، وفاشلون، وانطوائيون لا يطاقون. قد يكون المستخدم شخصاً مثيراً للإهتمام إذا لم يحبط نفسه من خلال إهدار طاقته في الإباحية.
 
-في عصر المعلومات هذا ، يتم تدريب الأفراد على التفكير في أي شيء يأمرهم به المجتمع. هذا التفكير الاجتماعي المفرط يهلك الذكاء. عندما يكون للتكنولوجيا هذا التأثير عليك ، فأنت لست بفرد. عندما يميز المرء نفسه عن الوضع الراهن يمكنه أن يجد الصفاء الذهني ؛ على سبيل المثال ، كون المواد الإباحية "طبيعية" أو "جزء من المجتمع" سيبرمج في عقلك ما لم تتوقف عن إنكار ذكائك وتبدأ بالتفكير في الأمر بنفسك.
+في عصر المعلومات هذا ، يتم تدريب الأفراد على التفكير في أي شيء يأمرهم به المجتمع. هذا التفكير الاجتماعي المفرط يُهلك الذكاء. عندما يكون للتكنولوجيا هذا التأثير عليك ، فأنت لست بفرد. عندما يُميّز المرء نفسه عن الوضع الراهن يمكنه أن يجد الصفاء الذهني ؛ على سبيل المثال ، سيبرمج المجتمع في عقلك أن المواد الإباحية "طبيعية" أو "جزء من المجتمع" ما لم تتوقف عن إنكار ذكائك الشخصي وتبدأ بالتفكير في الأمر بنفسك.
 
-الضغط النفسي هو أحد جوانب غسيل المخ. تم ترسيخ المواد الإباحية في العقول الباطنة لمليارات من الناس على انها "طريقة لتخفيف الضغط". يعتقد المستخدمون أنها تسمح لهم بالاسترخاء - والإبتعاد عن صعوبات حياتهم وأنها تفيدهم. هذا الاعتقاد ، مع ذلك ، يفسر كل شيء بطريقة عكسية. الإباحية تخلق الضغط.
+الضغط النفسي هو أحد جوانب غسل المخ. تم ترسيخ الإباحية في العقول الباطنة لمليارات من الناس على انها "طريقة لتخفيف الضغط". يعتقد المستخدمون أنها تسمح لهم بالاسترخاء - والإبتعاد عن صعوبات حياتهم وأنها تفيدهم. ولكن هذا الاعتقاد يفسر كل شيء بطريقة معكوسة. الإباحية *تخلق الضغط*.
 
-تخلق الإباحية الضغط عن طريق المبالغة في تحفيز وتشغيل مُستقبِلات الدوبامين. يخدع المستخدمون أنفسهم بالاعتقاد بأنها مطلوبة لتخفيف التوتر و الضغط ، على الرغم من أنهم قبل أن يصبحوا مستخدمين ، لم يكن لديهم أي إحتياج لها. ومن أجل "تخفيف" الضغط ، يستخدمونها مرة أخرى.
+تخلق الإباحية الضغط عن طريق المبالغة في تحفيز وتشغيل مُستقبِلات الدوبامين. يخدع المستخدمون أنفسهم بإعتقاد انها مطلوبة لتخفيف التوتر و الضغط ، على الرغم من أنهم قبل إدمانهم لم يكن لديهم أي حاجة لها. ومن أجل "تخفيف" الضغط ، يستخدمونها مرة أخرى.
 
-يبني دماغنا استجابة للمشاعر التي تثير "الوخزة". هذه المشاعر هي الخوف والقلق والملل. يأتي هذا الخوف (في حياة المستخدم) عادةً من الأحداث اليومية التي تحدث له ، مثل الخوف من فقدان وظيفته أو الخوف من الفشل أو الخوف من المرور بيوم سيء. في هذه الحالات ، يتخيل المستخدم الإباحية على أنها منقذ في نهاية اليوم و أنها ستجعل كل شيء على ما يرام - على الرغم من أنها ستجعل التعامل مع كل شيئ أكثر صعوبة.
+يبني عقلنا استجابة للمشاعر التي تثير "الوخزة". هذه المشاعر هي الخوف والقلق والملل. يأتي هذا الخوف (في حياة المستخدم) عادةً من الأحداث اليومية التي تحدث له ، مثل الخوف من فقدان وظيفته أو الخوف من الفشل أو الخوف من المرور بيوم سيء. في هذه الحالات ، يتخيل المستخدم الإباحية على أنها منقذ في نهاية اليوم و أنها ستجعل كل شيء على ما يرام - على الرغم من أنها ستجعل التعامل مع كل شيئ أكثر صعوبة.
 
 القلق والشك أيضًا مشاعر تُسبِب استجابة مماثلة. ردًا على عدم قدرتنا على معرفة كيفية حدوث شيء ما ، تصاب عقولنا بالشك والأفكار السلبية. يمكن أن تحدث الوخزة في هذه اللحظات لأن الإباحية يتم رؤيتها على أنها شيء "يصلح المشاعر السلبية". ولكن بدلاً من ذلك ، فإنها تخلق هذه المشاعر السلبية ، وتزداد سوءًا بمرور الوقت.
 
-الإباحية و الإستنماء مجرد حالة من الترقب المستمر ، ومن ثم الصفاء المؤقت ، وتعاد مرارًا وتكرارًا. عند استخدام الإباحية ، يتم إغلاق القشرة الجبهية (جزء من المخ) ، وبعد ذلك يتم تشغيلها مرة أخرى. هذا هو المكان الذي يأتي منه "وضوح ما بعد القذف". لأن عقلك الفكري تم تعطيله بشكل فوري.
+الإباحية و الإستنماء مجرد حالة من الترقب المستمر ، ومن ثم الصفاء المؤقت ، وتعاد مرارًا وتكرارًا. عند استخدام الإباحية ، يتم إغلاق القشرة الجبهية (جزء من المخ) ، وبعد ذلك يتم تشغيلها مرة أخرى. هذا هو السبب الذي يجعلك قادراً على التفكير بوضوح فيما كنت تشاهد بعد القذف. لأن عقلك الفكري تم تعطيله فورياً.
 
-نحن لا ننجذب حقًا إلى المقاطع البذيئة التي نتصفحها. نحن لا ننجذب حقًا إلى الأفكار المثيرة للاشمئزاز التي نلتقطها على طول الطريق لأن الأفكار القديمة لم تعد تكفينا. لكننا تم تكييفنا على التفكير في أن هذا ما نريده - نعتقد أن هذا هو ما يفيدنا. هل تعلم لماذا هناك مواد إباحية مثيرة للاشمئزاز؟ لأن بعض المستخدمين سئموا من المواد الإباحية "غير المثيرة للاشمئزاز".
+نحن لا ننجذب حقًا إلى المقاطع البذيئة التي نتصفحها. نحن لا ننجذب حقًا إلى الأفكار المثيرة للاشمئزاز التي نلتقطها على طول الطريق لأن الأفكار القديمة لم تعد تكفي. لكننا تم تكييفنا على التفكير في أن هذا ما نريده - نعتقد أن هذا هو ما يفيدنا. هل تعلم لماذا هناك مواد إباحية مثيرة للاشمئزاز؟ لأن بعض المستخدمين سئموا من المواد الإباحية "غير المثيرة للاشمئزاز".
 
-كلما زاد شعورك بالخزي أو إرتكاب السيئة أو القلق ، وكلما زادت درجة قذارة المحتوى ، كلما زاد اندفاع الدوبامين الذي تشعر به. هذا فقط يزيد من قوة المسار المعتاد للدوبامين في عقلك ، مما يسبب المزيد من فقدان الحساسية.
+كلما زاد شعورك بالخزي أو إرتكاب السيئة أو القلق ، وكلما زادت درجة قذارة المحتوى ، كلما زاد اندفاع الدوبامين الذي تشعر به. هذا فقط يزيد من قوة المسار المعتاد للدوبامين في عقلك ، مما يسبب المزيد من فقدان الحساسية به.
 
 
-من السهل الإقلاع عن الإباحية عندما تفهم طبيعتها الحقيقية. هذا لأنها لا توفر أي مزايا - ثم يمكنك التخلص منها تمامًا من حياتك ولن تكون جذابة مطلقاً. لا يمكنك أن تأكل السم "باعتدال".
+من السهل الإقلاع عن الإباحية عندما تفهم طبيعتها الحقيقية، هذا لأنها لا توفر أي مزايا. ثم يمكنك التخلص منها تمامًا من حياتك ولن تكون جذابة مطلقاً. لا يمكنك أن تأكل السم "بإعتدال".
 
 الاختيار هو أعظم قوة في الحياة. بمجرد أن تدرك أن لديك هذه القوة ، فأنت مثل النسر الذي نشأ وهو يعتقد أنه دجاجة ، يعيش مع دجاجات أخرى - ولكن في يوم من الأيام ادرك أنه يستطيع الطيران.
 
-نحن نندمر ذكاءنا من خلال وضع حدود لأفكارنا ولمعتقداتنا. أحد هذه الأمور تجاهل قدرتنا وقوتنا. ولكن، يمكننا التحكم في هذه القوة.
+نحن ندمر ذكاءنا من خلال وضع حدود لأفكارنا ولمعتقداتنا. أحد هذه الأمور تجاهل قدرتنا وقوتنا. ولكن، يمكننا التحكم في هذه القوة.
 
-تخيل أن دماغك الحوفي (الدماغ البدائي) هو جهاز كهربائي غبي. إذا قمت بفصل 99 من 100 سلك طاقة (أسباب كاذبة لاستخدام الإباحية) ، فلن يعرف أنك قمت بفصل هذا السلك ، كل ما يعرفه أنه لا يزال لديه قوة. عليك أن تفصل كل السلك ، أي كل سبب كاذب. بعد ذلك ، ستجد السلام كما لم تراه من قبل.
+تخيل أن دماغك الحوفي (الدماغ البدائي) هو جهاز كهربائي غبي. إذا قمت بفصل 99 من 100 سلك طاقة (أسباب كاذبة لاستخدام الإباحية) ، فلن يعرف أنك قمت بفصل هذا السلك ، كل ما يعرفه أنه لا يزال لديه طاقة. عليك أن تفصل كل سلك ، أي كل سبب كاذب. بعد ذلك ، ستجد السلام كما لم تراه من قبل.
 
 كن حذرا من تفكيرك السلبي. التشاؤم شيء يرضي النفس. إذا قلت أنك ستفشل ، فستفشل دائمًا. إذا قلت أن شيئًا ما سيكون سيئًا ، ستراه دائمًا بهذه الطريقة. لا فائدة من خلق تلك السلبية من البداية.
 
@@ -47,32 +47,31 @@
 
 ## غسيل الدماغ من خلال النصائح السيئة
 
-لسوء الحظ ، فإن العالم ممتلئ بالنصائح السيئة. ومن كثرة هذه النصائح ، من المنطقي أن لا تنجح الأغلبية في ما يريدون تحقيقه. يجب على الفرد التفريق بين النصائح الفعالة و النصائح الغير فعالة. يتطلب الأمر جهدا ، لكنها عملية تحرير تزود المرء بالتحكم في حياته. ولكن، فقد قيل لمعظم المستخدمين أن يسلموا زمام الأمور إلى "المحترفين" الذين يدعون معرفة كل شيء. هذا يفتح أبواباً للنصائح الضحلة و السطيحة, وللمحتالين, ولإضاعة الوقت. لا تدع أي "محترف" يتحكم بك.
+لسوء الحظ ، فإن العالم ممتلئ بالنصائح السيئة. ومن كثرة هذه النصائح ، من المنطقي أن لا تنجح الأغلبية في ما يريدون تحقيقه. يجب على الفرد التفريق بين النصائح الفعالة و النصائح الغير فعالة. يتطلب الأمر جهدا ، لكنها عملية تحرير تزود المرء بالتحكم في حياته. ولكن ، فقد قيل لمعظم المستخدمين أن يسلموا زمام الأمور إلى "المحترفين" الذين يدّعون معرفة كل شيء. هذا يفتح أبواباً للنصائح الضحلة و السطحية وللمحتالين ، ولإضاعة الوقت. لا تدع أي "محترف" يتحكم بك.
 
-المشكلة في تلك النصائح الفاشلة هي أن الذين يقدمونها يدعون أن نصيحتهم هي الحقيقة المطلقة. إذا اردت حقاً أن تفهم نطاق إدمانك وكيف تتعافى منه, إذا لم تترك هذه التفاهمات الخاطئة وطرق التفكير السلبية ، ستظل في هذا الإدمان إلى الأبد ، مستمراً في اتباع النصائح السطحية.
+المشكلة في تلك النصائح الفاشلة هي أن الذين يقدمونها يدعون أن نصيحتهم هي الحقيقة المُطلَقة.لمن أراد حقاً أن يفهم نطاق إدمانه وكيفية التعافي منه ، إذا لم يقم بترك هذه المفاهيم الخاطئة وطرق التفكير الغير فعالة ، سيظل في هذا الإدمان إلى الأبد ، مستمراً في اتباع النصائح السطحية.
 
-النصيحة السيئة تجعل المرء يشعر بالحاجة إلى تعزيز معتقداته التي تعلمها حديثاً بشكل مستمر. ومع ذلك ، *التعزيز المستمر  لإعتقاد هو مؤشر على الخوف*.
+النصيحة السيئة تجعل المرء يشعر بالحاجة إلى تعزيز معتقداته التي تعلمها حديثاً بشكل مستمر. ومع ذلك ، *التعزيز المستمر لإعتقاد هو مؤشر على الخوف*.
 
-هناك العديد من الأنشطة الغير إنتاجية التي "*يحاول*" الناس الذين يريدون ترك الإباحية والاستمناء بممارستها. أحد الأشياء الشائعة هو عد الأيام ، حيث يحسب الشخص عددا من الأيام لتحديد تقدمه. قد تبدو هذه طريقة جيدة لتحديد الأهداف ، لكن الحقيقة هي أن الحرية تُوجَد في اليوم 1. ليس في اليوم 30 ، وليس في اليوم 90 ، وليس في اليوم 1000. توجد الحرية عندما تتخلى عن ربط الإباحية بحياتك. عندما تتوقف عن المطاردة. لا تحتاج إلى الاستمرار في مكافأة نفسك لأنك لم تقم بإيذاء نفسك. **وإلا قد تستمر في رؤية أن الملذات الفورية جذابة, او قد تبحث عن المتعة من خلال التقدم في عدد أيامك**. كل من هذه الأشياء ليست منتجة. يضيف عد الأيام ضغطاً إضافياً ، ويوحي أن عدم التخريب الذاتي أمر مثير للإعجاب. من الحكمة فقط أن يبحث المرء عن حياة منتجة ، لا شيء أكثر من ذلك.
+هناك العديد من الأنشطة الغير إنتاجية التي "*يحاول*" الناس الذين يريدون ترك الإباحية والاستمناء بممارستها. أحد الأشياء الشائعة هو عد الأيام ، حيث يحسب الشخص عددا من الأيام لتحديد تقدمه. قد تبدو هذه طريقة جيدة لتحديد الأهداف ، لكن الحقيقة هي أن الحرية تُوجَد في اليوم 1. ليس في اليوم 30 ، وليس في اليوم 90 ، وليس في اليوم 1000. توجد الحرية عندما تتخلى عن ربط الإباحية بحياتك، وعندما تتوقف عن المطاردة. لا تحتاج إلى الاستمرار في مكافأة نفسك لأنك لم تقم بإيذاء نفسك. **وإلا قد تستمر في رؤية أن الملذات الفورية جذابة, او قد تبحث عن المتعة من خلال التقدم في عدد أيامك**. كل من هذه الأشياء ليست فعالة. يضيف عد الأيام ضغطاً إضافياً ، ويوحي أن عدم تخريب ذاتك أمر مثيرٌ للإعجاب. من الحكمة فقط أن يبحث المرء عن حياة منتجة ، لا شيء أكثر من ذلك.
 
-لدى الناس فكرة "خطوة ثم خطوة" حيث يريدون أن يأخذوا كل يوم على حداه بعد الإقلاع عن الإباحية. ولكن، يأتي هذا مع فكرة أنه يوجد شيء سيء على قيد الحدوث. وكأن شيئاً يضيع من حياتك. هل "تأخذ يوما واحدا في كل مرة" بعد أن تتحرر من سجن؟ لا! لأنك لن تكون محاصرا بعد أن تتحرر. لا شيء يتغير جسديا ، لكن هذه التغييرات في المذهب فقط تجعل الشخص الذي يريد أن يجد الحرية أن يعاملها على عكس ذلك- وكأنها سجن.
+لدى الناس فكرة "خطوة بخطوة" حيث يريدون أن يمتنعوا في كل يوم على حداه بعد الإقلاع عن الإباحية. ولكن، يأتي هذا مع فكرة أنه يوجد شيء سيء على قيد الحدوث. وكأن شيئاً ما يضيع من حياتك. هل "تأخذ يوما واحدا في كل مرة" بعد أن تتحرر من سجن؟ لا! لأنك لن تكون محاصراً بعد أن تتحرر. لا شيء يتغير جسديا ، لكن هذه التغييرات في المعتقدات تجعل الشخص الذي يريد أن يجد الحرية أن يعاملها على عكس ذلك - وكأنها سجن.
 
-هناك طريقة أخرى يمكن أن يظهر بها هذا الارتباط بالإباحية وهي القيام بعدد معين من الأيام ، مثل 7 أو 14 أو 30 يوما من عدم وجود الأباحية او الأستنماء. أنا لا أفهم ذلك. لماذا تعود إلى شيء ليس له فائدة في حياتك؟ لماذا تنظرة لهذه اللمحة من الحرية ثم تغطس رأسك مرة أخرى تحت الماء؟ هؤلاء الناس ما زالوا يعتقدون أن للإباحية بعض القيمة في حياتهم. وربما يكون الوضع هكذا إذا رأوا أي فائدة في 'الملذات' الفورية. ولكن إذا كنت لا ترى فائدة في الملذات الفورية ، فلا يوجد أي شيء اخر في الإباحية قد تريده.
+هناك طريقة أخرى يمكن أن يظهر بها هذا الارتباط بالإباحية وهي القيام بعدد معين من الأيام ، مثل 7 أو 14 أو 30 يوما من عدم وجود الأباحية او الأستنماء. أنا لا أفهم ذلك. لماذا تعود إلى شيء ليس له فائدة في حياتك؟ لماذا تنظر لهذه اللمحة من الحرية ثم تغطس رأسك تحت الماء مرة اخرى؟ اولئك الذين ما زالوا يعتقدون أن للإباحية بعض القيمة في حياتهم. وربما يكون هناك قيمة إذا رأوا أن 'الملذات' الفورية مفيدة لهم. ولكن إذا كنت لا ترى فائدة في الملذات الفورية ، فلا يوجد أي شيء اخر في الإباحية قد تريده.
 
-المذهب الخاطئ الآخر هو "الإعتدال". الإعتدال هو عملية تباعد الإستخدام عبر الوقت أو خفض شدة العادة السيئة. هذا يستخدم عادة لإدمان المخدرات، حيث يحدث انسحاب جسدي ورد فعل سلبي من عدم وجود مخدر محدد. ومع ذلك، لا يوجد أي انسحاب جسدي للإباحية. لذلك، فإن الإعتدال سيكون منطقياً فقط إذا عمل لأي انسحاب عقلي. المشكلة هي، في الوقت بين الجلسات، سيبدأ الشخص في تخيل الجلسة المقبلة؛ سيبني الدوبامين والترقب لتلك الجلسة. في بعض الأحيان، يمكن أن يكون هذا أسوأ حتى من عدم الإعتدال بسبب هذه الكمية الأعلى من الترقب. لا يلزمك الإعتدال إذا كنت قادراً إيجاد الحرية في اللحظة الحالية.
+المعتقد الخاطئ الآخر هو "الإعتدال". الإعتدال هو عملية تباعد الإستخدام عبر الوقت أو خفض شدة العادة السيئة. هذا يُستخدم عادةً لإدمان المخدرات، حيث يحدث إنسحاب جسدي ورد فعل سلبي من عدم وجود مخدر محدد. ومع ذلك، لا يوجد أي انسحاب جسدي للإباحية. لذلك، فإن الإعتدال سيكون منطقياً فقط إذا كان يجدي نفعاً  للإنسحاب عقلي. المشكلة هي في الوقت بين الجلسات، سيبدأ الشخص في تخيل الجلسة المقبلة؛ سيبني الدوبامين والترقب لتلك الجلسة. في بعض الأحيان، يمكن أن يكون هذا أسوء حتى من عدم الإعتدال بسبب هذه الكمية الأعلى من الترقب. لا يلزمك الإعتدال إذا كنت قادراً على إيجاد الحرية في كل لحظة.
 
-المذهب الخاطئ الأخير الذي سأكتب عنه هو "الوحوش". ربما سمعت بمصطلحات "الوحش الصغير" و"الوحش الكبير" لوصف أجزاء مختلفة من العقل البشري. هذه محاولات لمحاولة تبسيط ديناميكية العقل، ولكنها تفشل في ذلك. فهذه الفكرة تخلق سيناريو "أنا ضدهم". أنت تخلق هذا العدو الخيالي (هذا "الوحش"أو الدماغ البدائي) وتتصور نفسك تحارب هذه الشخصية. الحقيقة هي أنه لا وحش "كبير" أو "صغير" موجود. لا يريد "دماغك البدائي" الكبير أو الصغير أن يؤذيك، فهو جزء أساسي من نظامك، وهو جزء موجود لمساعدتك، ليس لعرقلتك. وقد تقول أن هذا خطأ، وأنه يسلب السيطرة من حياتك. وقد يكون هذا صحيحًا، ولكن هذا يحدث عندما يكون لديك انحراف ادراكي - عندما تحاول إجبار إيمان / حقيقة لا تفهمها أو لم تكتشفها بنفسك.
+المعتقد الخاطئ الأخير الذي سأكتب عنه هو "الوحوش". ربما سمعت بمصطلحات "الوحش الصغير" و"الوحش الكبير" لوصف أجزاء مختلفة من العقل البشري. هذه محاولات لتبسيط ديناميكية العقل، ولكنها تفشل في ذلك. فهذه الفكرة تخلق سيناريو "أنا ضدهم". أنت تخلق هذا العدو الخيالي (هذا "الوحش"أو الدماغ البدائي) وتتصور نفسك تحارب هذه الشخصية. الحقيقة هي أنه لا وحش "كبير" أو "صغير" موجود. لا يريد "دماغك البدائي" الكبير أو الصغير أن يؤذيك، فهو جزء أساسي من نظامك، وهو جزء موجود لمساعدتك، ليس لعرقلتك. وقد تقول أن هذا خطأ، وأنه يسلب السيطرة من حياتك. وبينما قد يكون هذا صحيحًا، ولكن هذا يحدث عندما يكون لديك انحراف ادراكي - عندما تحاول إجبار إيمان / حقيقة لا تفهمها أو لم تكتشفها بنفسك.
 
-**لن يتجاهل عقلك البدائي الحقيقة التي تم حلها وفهمها ، ولكنه سيتجاهل المعتقدات الفارغة.** وبعض الناس قد يقولون أنه لا يوجد فرق ، ولكن هذا غير صحيح. الحقيقة تُدرس وتُناقش ويتم العثور عليها بواسطة الفرد. بينما المعتقدات يمكن إزالتها بسهولة ، وتكون مسندة على القليل من المضمون المفيد، وكثيرًا ما تكون هذه المعتقدات خارجية. هذا هو الفرق.
+**لن يتجاهل عقلك البدائي الحقيقة التي تم حلها وفهمها ، ولكنه سيتجاهل المعتقدات الفارغة.** وبعض الناس قد يقولون أنه لا يوجد فرق ، ولكن هذا غير صحيح. الحقيقة تُهضم وتُنقد ويتم العثور عليها بواسطة الفرد. بينما المعتقدات يمكن إزالتها بسهولة ، وتكون مسندة على القليل من المضمون المفيد، وكثيرًا ما تكون هذه المعتقدات خارجية. هذا هو الفرق.
 
 
-لا يمكنك أن تفرض فهم الحقيقة عندما يكون لديك توقعات حولها - يجب أن تكون قابلاً لأي نتيجة تظهر عندما تجد الإجابة. على سبيل المثال، إذا تبين أن الإباحية كانت مفيدة لشخص يريد حياة منتجة، فسيكون من الذكاء استخدامها. أو إذا تبين أنها غير منتجة، فلا ينبغي لك استخدامها، ويجب عليك أن تجد الحرية. باستخدام هذه الطريقة، يمكنك استخدام قدراتك الاستنتاجية لقياس الحقيقة فقط إذا كنت تتمتع بالتواضع والإخلاص.
+لا يمكنك أن تغصب فهم الحقيقة عندما يكون لديك توقع لما هي عليه - يجب أن تكون قابلاً لأي نتيجة قد تظهر عندما تجد الإجابة. على سبيل المثال، إذا تبين أن الإباحية كانت مفيدة لشخص يريد حياة منتجة، فسيكون من الذكاء استخدامها. أو إذا تبين أنها غير منتجة، فلا ينبغي لك استخدامها، ويجب عليك أن تجد الحرية. باستخدام هذه الطريقة، يمكنك استخدام قدراتك الاستنتاجية لقياس الحقيقة فقط إذا كنت تتمتع بالتواضع والإخلاص.
 
-لذلك، الكراهية أجزاء من عقلك لا والنظام الذي يشكل وجودك أي فائدة أو هدف. ليس هناك عدو غير مرئي يحاول جعلك تقع في عادات سيئة. بل إن عقلك يتخذ أكثر القرارات والأفعال المنطقية بناءً على فهمك لما هو حقيقة.
+لذلك، كراهية أجزاء من عقلك والنظام الذي يشكل وجودك ليس له أي فائدة أو هدف. ليس هناك عدو غير مرئي يحاول جعلك تقع في عادات سيئة. بل إن عقلك يتخذ  القرارات والأفعال الأكثر منطقية بناءً على فهمك لما هو حقيقة.
 
 "لم يكن هناك وحش غامض في عقلي يجبرني على استخدام الإباحية، بل كنت أنا من البداية."
 
 الحرية لا تتحقق عن طريق استبدال البيئة أو الهروب منها. بل تتحقق من خلال فهم طبيعة ما يعيقنا. وليس من خلال محاربة هذه الأشياء أو كرهها. فنحن نريد محاربة المشاكل أكثر مما نريد فهمها.
 
-عندما تكتشف الحقيقة، يمكن أن تختفي العادات السيئة بكل سهولة من خلال الفهم. ولكن ذلك يتطلب عقلًا هادئًا، وساكنًا، غير متوقع ولا يقاوم شيئًا. فقط عندما يكون العقل على هذا الحال، تتوفر الإمكانية لرؤية ما هو صحيح. فالحقيقة هي التي تحرر، وليس الجهد المبذول لتحرير نفسك.
-
+عندما تكتشف الحقيقة، يمكن أن تختفي العادات السيئة بكل سهولة من خلال الفهم. ولكن ذلك يتطلب عقلًا هادئًا، وساكنًا، غير متوقعٍ أو مقاومٍ لشيء ما. فقط عندما يكون العقل على هذا الحال، تتوفر الإمكانية لرؤية ما هو صحيح. فالحقيقة هي التي تحرر، وليس ما تبذله من جهدٍ لتحرير نفسك.
