--- a/src/markdown/arabic/5. Love.md
+++ b/src/markdown/arabic/5. Love.md
@@ -1,64 +1,62 @@
-الحب هو جزء مهم من فهمك وله علاقة بالتحكم في السائل المنوي والمتعة. الفهم والتغييرات تحدث في أعماق العقل لأن الإدمان (أي إتباع الشهوات) ليس شيئًا يحدث مرة واحدة. إنها أسلوب حياة. إذا لم تتطابق هويتك ومبادئك مع أفعالك ، فستواجه عدم انسجام لا يمكن إصلاحه سوى بالتقليل من مطاردة المتعة أو تغيير هويتك ومبادئك ومفاهيمك (النفس).
+الحب هو جزء مهم من فهمك وله علاقة بالتحكم في السائل المنوي والمتعة. الفهم والتغييرات تحدث في أعماق العقل لأن الإدمان (أي إتباع الشهوات) ليس شيئًا يحدث مرة واحدة. إنه أسلوب حياة. إذا لم تتطابق هويتك ومبادئك مع أفعالك ، فستواجه عدم انسجام لا يمكن إصلاحه سوى بالتقليل من مطاردة المتعة أو تغيير هويتك ومبادئك ومفاهيمك (النفس).
 
-استخدام الوسائل الآخرة للارتياح والأمان ليس حبًا. الحب ليس أبدًا أمانًا ، بل هو حالة لا يوجد فيها رغبة في الأمان ؛ إنها حالة من الضعف. الجنس لا يشعرك بالأكتمال ، بل الحميمية هي. في الواقع، الحميمية هي احتياج عاطفي ، ليس فقط جسديًا ، حتى بالنسبة للرجال. لا توفر الإباحية الحميمية ، بل تمنعك من العثور عليها.
+استخدام الوسائل الآخرة للارتياح والأمان ليس حبًا. الحب ليس أمانًا ، بل هو حالة لا يوجد فيها رغبة في الأمان ؛ إنها حالة من الضعف. الجنس لا يكملك ، بل الحميمية هي التي تُكملك. في الواقع ، الحميمية إحتياج عاطفي ايضاً وليس فقط جسدي ، حتى بالنسبة للرجال. لا توفر الإباحية الحميمية ، بل تمنعك من العثور عليها.
 
+عندما يكون الجنس عادياً وطبيعيًا ، فتعتبر لعبة تُلعب وفقًا للقواعد التي تصنعاها (أنت و زوجك) بأنفسكم دون التفكير للحظة في كيفية قيام الآخرين بها أو كيف يُفترض أن تتم.
 
-عندما يكون الجنس عادياً وطبيعيًا ، فتعتبر لعبة تُلعب وفقًا للقواعد التي تصنعها بنفسك دون التفكير للحظة في كيفية قيام الآخرين بها أو كيف يُفترض أن تتم.
+التركيز على الأجزاء التناسلية العارية للمرأة يضعف قدرتك على تقدير جمال ابتسامتهن ، أو بهجة عيونهن عندما يتحدثن أو يضحكن. بعد الإقلاع عن الإباحية ، ستندهش من مدى جمال الإناث الحقيقيات التي تراهن كل يوم.
 
-التركيز على الأجزاء الجنسية العارية للمرأة يضعف قدرتك على تقدير جمال ابتسامتهم ، أو بهجة عيونهن عندما يتحدثن أو يضحكن. بعد الإقلاع عن الإباحية ، ستندهش من مدى جمال المرأة الحقيقية التي تراها كل يوم.
+تخلق الإباحية صورة منحرفة (ويتقبلها المجتمع) تحرف تعريف العلاقة الصحية. تقوم هذه الفكرة المنحرفة بتصعيب العثور على شركاء ذو مغزى (لأنهم يبحثون عن المثالية الجسدية). ولكن عندما يجدون هؤلاء شركاء ، فإنهم يريدونهن من أجل المتعة فقط ، وليس من أجل تكوين علاقة حميمة معهن. هذه الرغبة الضحلة هي مجرد شهوة أخرى للمتعة.
 
-تخلق الإباحية صورة منحرفة (التي يتقبلها المجتمع) تحرف تعريف العلاقات الصحية، وتصعب على الأشخاص العثور على شركاء ذوي مغزى (لأنهم يبحثون عن الكمال الجسدي). ولكن عندما يجدون هؤلاء شركاء ، فإنهم يريدونهم من أجل المتعة فقط ، وليس من أجل تكوين علاقة حميمة معهم. هذه الرغبة الضحلة هي مجرد شهوة أخرى للمتعة.
-
-تحدث الكثير من المعارك الخارجية لأن حالتك الداخلية ليست جيدة. عندما تكون مسالمًا داخليًا بشكل طبيعي ، فإنك ستخوض عددًا أقل من الجدالات. ستكون أكثر حُبًا دون توقع أي شيء في المقابل. سيهتم ذلك الحب  بعلاقاتك الخارجية.
+تحدث الكثير من المعارك الخارجية لأن حالتك الداخلية ليست جيدة. عندما يكون السلام الداخلي وضعك الطبيعي ، ستخوض عددًا أقل من الجدالات. ستكون أكثر حُبًا دون توقع أي شيء في المقابل. سيهتم ذلك الحب بعلاقاتك الخارجية.
 
 ## الحب هدية
 
-الحب هو هدية من الطاقة. وكأنك تقول: أنا أعطيك نفسي ، في كل ما أنا عليه لك. وسوف تعطيني نفسك بكل ما أنت عليه. إنه هدية من الطاقة والنقاء. إذا كنت تعتقد أن شخصًا ما لا يستحق هذه الهدية (أي الحب) ، فلا تقدمها.
+الحب هو هدية من الطاقة. وكأنك تقول: أنا أعطيك نفسي ، في كل ما أنا عليه لك. وسوف تعطيني نفسك بكل ما أنت عليه. إنه هدية من الطاقة والنقاء. إذا كنت تعتقد أن شخصًا ما لا يستحق هذه الهدية (أي الحب) ، فلا تقدمها له.
 
-هذه هي طبيعة الحب. صفقة متبادلة. ومع ذلك ، فإن الناس هذه الأيام رخيصة جدًا - يشاركون في علاقات لا تفضلهم ، كل ذلك من أجل مطاردة المتعة والشعور والرغبة في أن تكون محبوبًا.
+هذه هي طبيعة الحب. صفقة متبادلة. ومع ذلك ، فإن الناس هذه الأيام رخصاء جدًا - يشاركون في علاقات لا تُفضلهم ، كل ذلك من أجل مطاردة المتعة والشعور والرغبة في أن تكون محبوبًا.
 
-إذا كان المرء يبحث عن النقاء ، بدلاً من التفكير في وقت ذاك الشريك في غرفة النوم ، سيشعر بالحب الحقيقي ؛ حب غير ملوث بما حاولت الإباحية تقليده، لكنه فشلت في فعله. هذه البراءة بين الشريكين ، والتي لها مغزى ، هي الجمال الحقيقي.
+إذا كان المرء يبحث عن النقاء ، بدلاً من التفكير فقط في وقت دخول ذاك الشريك الى غرفة النوم ، سيشعر بالحب الحقيقي ؛ حب غير ملوث بما حاولت الإباحية تقليده، وفشلت في فعله. هذه البراءة بين الشريكين ، والتي لها مغزى ، هي الجمال الحقيقي.
 
 
 ## الخوف من الحب
 
-بعض الذين يتركون الإباحية أو الذين يمارسون الاحتفاظ بالسائلهم المنوي يكتسبون نظرة غير صحية للعلاقات. في محاولتهم لترك الإباحية ، يحجبون كل الأفكار الجنسية ، ويخدرون أنفسهم في حالة غريبة حيث يخشون زيارة وسائل التواصل الاجتماعي أو يتجنبون النساء. هذا الخوف يخلق فقط عيوبًا وليس منتجًا.
+بعض الذين يتركون الإباحية أو الذين يمارسون الحفاظ على المني يكتسبون نظرة غير صحية للعلاقات. في محاولتهم لترك الإباحية ، يحجبون كل الأفكار الجنسية ، ويخدرون أنفسهم في حالة غريبة حيث يخشون زيارة وسائل التواصل الاجتماعي أو يتجنبون النساء. هذا الخوف يخلق فقط عيوبًا وغير منتج.
 
-إذا كان لديك هذه النظرة الغير صحية للعلاقات حيث تخشى أي شيء جنسي أو حميم ، يمكن لجسدك أن يذهب ، "حسناً إذاً ، أعتقد أننا لن نمارس الجنس مطلقاً. لن نكون قادرين على ممارسة العادة السرية ، إلخ." . يمكن أن يؤدي تجنب العلاقات الحميمة والحب إلى جعلك أكثر خضوعًا ويمكن أن يتسبب في انخفاض الرغبة الجنسية والطاقة لديك. يثبت هذا الخوف و التجنب أنك تريد الهروب من الحب / العلاقات الحميمة بدلاً من فهمها.
+إذا كان لديك هذه النظرة الغير صحية للعلاقات حيث تخشى أي شيء جنسي أو حميم ، قد يقول جسدك "حسناً إذاً ، أعتقد أننا لن نمارس الجنس مطلقاً. لن نكون قادرين على ممارسة العادة السرية ، إلخ." ويمكن أن يؤدي تجنب العلاقات الحميمة والحب إلى جعلك أكثر خضوعًا ويمكن أن يتسبب في انخفاض الرغبة الجنسية والطاقة لديك. يثبت هذا الخوف والتجنب أنك تريد الهروب من الحب / العلاقات الحميمة بدلاً من فهمها.
 
 بدلاً من الفكرة السامة القائلة بأن حجب شيء ما والخوف منه سيساعدان، فمن الأفضل تكوين رؤية صحية لما تعنيه العلاقات حقًا ، وقيمة الشريك الصادق المُحب.
 
 يخشى البعض أيضًا من الخسارة ، لأنهم يرون أن كل حب له نهاية. ولكن، كل الأشياء لها نهاية ، وهنا تنشأ القيمة. في العلاقات ، اعتز بما لديك ، لكن لا تتشبث بالماضي ، فلن يقودك ذلك إلى أي مكان.
 
-يمكنك ممارسة الجنس مع الاحتفاظ بطاقتك. تحتاج فقط إلى ممارسته باعتدال ،  على حسب مقدار تقديرك للطاقة التي تمتلكها. إذا أصبح الجنس الشيء الذي تبحث عنه بعد نهاية "يوم صعب" ، فيمكنه أن يؤدي نفس الدور الذي قامت به الإباحية.
+يمكنك ممارسة الجنس مع الاحتفاظ بطاقتك. تحتاج فقط إلى ممارسته بإعتدال ،  على حسب مقدار تقديرك للطاقة التي تمتلكها. إذا أصبح الجنس الشيء الذي تبحث عنه بعد نهاية "يوم صعب" ، فيمكنه أن يؤدي نفس الدور الذي قامت به الإباحية.
 
-الجنس هو تبادل الألفة والنقاء بين فردين. غالبًا ما يفقد الشخص الذي يمارس الجنس طهارته. يمكن ملاحظة ذلك في سلوكهم ومعاملتهم وكل شيء يتعلق بهم.
+الجنس هو تبادل الألفة والنقاء بين فردين. غالبًا ما يفقد الشخص الذي يمارس الجنس بإفراط طهارته. ويمكن ملاحظة ذلك في سلوكه ومعاملته وكل شيء يتعلق به.
 
-بالنسبة لشخص يهتم حقًا بشريكه ، فمن المحتمل أن يشعر بالسوء حيال نزع طهارته من خلال الأفعال الجنسية. ومع ذلك ، إذا كانت التجارة مفيدة للطرفين ، فلا داعي للقلق.
+بالنسبة لشخص يهتم حقًا بشريكه ، فمن المحتمل أن يشعر بالسوء حيال نزع طهارته بالأفعال الجنسية. ومع ذلك ، إذا كانت المقايدة مفيدة للطرفين ، فلا داعي للقلق.
 
 
 ## الهوس
 
 من جهة هناك خوف من الحب ، ومن جهة أخرى هناك هوس. الهوس مفيد للإبداع (عندما تعطيه حدودًا). لكن لا مكان له في العلاقات.
 
+التعلق يبني التسمم والسلبية والرؤية المحدودة. تُرمَى الصورة الكاملة و تستبدل برؤية متضائلة وصغيرة. إذا كنت تريد أن تنمو كشخص ، لا يجب أن تكون مهووسًا بشخص ما - أو حتى بفكرة شخص ما - فهذا يبني السلبية. ليس عليك أن تثق بي في هذا الموضوع. ربما يمكنك أن تتخيل العديد من المهووسين بالحب الذين يتخلصون من مَنطقِهم في مطاردة الشهوات.
 
-التعلق يبني التسمم والسلبية والرؤية المحدودة. تُرمَى الصورة الكاملة و تستبدل برؤية متضائلة و صغيرة. إذا كنت تريد أن تنمو كشخص ، لا يجب أن تكون مهووسًا بشخص ما - أو حتى فكرة شخص ما - فهذا يبني السلبية. ليس عليك أن تثق بي في هذا الموضوع. ربما يمكنك أن تتخيل العديد من المهووسين بالحب الذين يتخلصون من العقل في مطاردة شهواتهم.
+احدى القواعد الأساسية التي تعلمتها بخصوص العلاقات ، وهي انك لا ينبغي ان تكون مــتــعــلــقـاً بشريك كأنك جزء منه إذا أردت الأيجابية في حياتك. يجب أنت تسعى لكي تعمل انت وشريكك في توازي ، و تمدون الدعم لبعضكم البعض ، ولكن لا ينبغي على أي منكما أن يكون معتمداً على الأخر أو متعلقاً به.   
 
-احدى القواعد الأساسية التي تعلمتها بخصوص العلاقات ، وهي انك لا ينبغي ان تكون مرتبطاً بشريك كأنك جزء منه إذا أردت الأيجابية في حياتك. يجب أنت تسعى لكي تعمل انت و شريكك في توازي ، و تمدون الدعم لبعضكم البعض ، ولكن لا ينبغي على أي منكما أن يكون معتمداً على الأخر.   
-
-ترك التعلق بشريكك قد يكون صعباً ، ولكنه يمدك الحرية. يتطلب الأمر بعضاً من التأمل و التواضع.
+ترك هذا التعلق بشريكك قد يكون صعباً ، ولكنه يمدك الحرية. يتطلب الأمر بعضاً من التأمل و التواضع.
   
-## إلانفصال / ترك العلاقة
+## إلانفصال / ترك العلاقة / الفركشة
 
-كرد فعل على انفصالك ، قد يرى شيء ما في ذهنك الإباحية على أنها وسيلة للتكيف. ومع ذلك ، فإن الإباحية خالية من الحب. جمال ونقاء وفائدة علاقة حب حقيقية غائبة و غير متواجدة. افهم آلية الحب ، ولن تكون بحاجة للتعامل مع الإنفصال بالإباحية. عندما تفقد شريكًا ، يمكنك استخدام الطاقة الجنسية وتحولها إلى مجالات أخرى من حياتك ، بدلاً من إهدارها في العادة السرية.
+كرد فعل على انفصالك ، قد يرى شيء ما في ذهنك الإباحية على أنها وسيلة للتكيف. ومع ذلك ، فإن الإباحية خالية من الحب. جمال ونقاء وفائدة علاقة حب حقيقية تكون غائبة. افهم آلية الحب ، ولن تكون بحاجة للتعامل مع الإنفصال بالإباحية. عندما تفقد شريكًا ، يمكنك إستخدام الطاقة الجنسية وتحويلها إلى مجالات أخرى في حياتك ، بدلاً من إهدارها في الأستمناء.
 
-من الطبيعي أن تشعر بالتألم عند مغادرة شريكك - ولكن الإباحية ليست بضوء في الظلام. بعد مرورك بشيء صعب ، لما تقوم بمعاقبة نفسك و تضاعف الألم؟  
+من الطبيعي أن تشعر بالتألم عند مغادرة شريكك - ولكن الإباحية ليست بضوء في الظلام. قد مررت بشيء صعب ، فلما تقوم بمعاقبة نفسك و مضاعفة الألم؟  
 
-إذا كان القذف هو إرادتك ، فيجب عليك ان تفكر أولاً في تحويل هذه الأرادة و الطاقة الجنسية لما هو أفضل، و أنه لا ينبغي عليك أن تضيع طاقتك بكل سهولة.
+إذا كان القذف هو إرادتك ، فيجب عليك ان تفكر أولاً في تحويل هذه الأرادة و الطاقة الجنسية لما هو أفضل ، و أنه لا ينبغي عليك أن تضيع طاقتك بكل سهولة.
 
-"ذكريات الحب لا تتلاشى. إنها تدوم ، و توجه ، و تؤثر حتى بعد مرور فترة طويلة من اختفاء مصدرها. لا يوجد أي شيء جديد في هذا الأمر. كل من تم تأثيره من خلال **حب حقيقي** يدرك على ظاهر حق أن الحب يترك علامات على قلب. تأثير الحب يستمر ﻷن الحب شيء روحاني في اصله. المرء الذي لا يشعر بأي تأثر عندما يصل لقمة إنجازاته عن طريق الحب شخصٌ مفقود الأمل به - إنه ميت، حتى ولو بدى انه على قيد الحياة"   
+"ذكريات الحب لا تتلاشى. إنها تدوم ، و توجه ، و تؤثر حتى بعد مرور فترة طويلة من اختفاء مصدرها. لا يوجد أي شيء جديد في هذا الأمر. كل من تم تأثيره من خلال **حــب حقــيقـي** يدرك على ظاهر حق أن الحب يترك علامات على قلب. تأثير الحب يستمر ﻷن الحب شيء روحاني في اصله. المرء الذي لا يشعر بأي تأثر عندما يصل لقمة إنجازاته عن طريق الحب شخصٌ مفقود الأمل به - إنه ميت، حتى ولو بدى انه على قيد الحياة"   
 
-إذا كنت تؤمن انك سيء الحظ لأنك "أحببت و خسرت" ، فلتمحي هذه الفكرة. المرء الذي قد أحب حباً حقيقياً يستحيل عليه الخسارة بشكل كامل. الحب متقلب و مؤقت. يأتي حينما يشاء ويذهب بدون أي تحذير. تقبله و أستمتع به في دوامه، ولكن لا تقضي أي لحظةٍ في قلقٍ من رحيلة. القلق لن يعيد حبك مرةً اخرى.   
+إذا كنت تؤمن انك سيء الحظ لأنك "أحببت و خسرت" ، فلتمحو هذه الفكرة. المرء الذي قد أحب حباً حقيقياً يستحيل عليه الخسارة بشكل كامل. الحب متقلب و مؤقت. يأتي حينما يشاء ويذهب بدون أي تحذير. تقبله و أستمتع به في دوامه، ولكن لا تقضي أي لحظةٍ في قلقٍ من رحيلة. القلق لن يعيد حبك مرةً اخرى.   
 
 
 ## الأستحقاق
@@ -67,6 +65,6 @@
 
 الناس يشعرون بالأستحقاق للحب والمتعة، لأنهم يطاردون المتعة ولا يحبون أنفسهم.
 
-قد تم تربية الشباب من خلال شركاء مزيفيين عبر الأنترنت. الاف من "الشركاء" الذي يتوقع الشباب أنهم سيظهروا أنفسهم عندما يريدون. الكثير منا تم تقديمه الى الأفكار الجنسية، وما نظن انه الحب، عن طريق الإباحية. قد تم تحويل العلاقة الحميمة والناقية بين شريكين الى نسخةٍ مبسطةٍ و مليئة بالشهوات، وهذه هي النسخة التي يتخذها الناس الأن.  
+قد تم تربية الشباب من خلال شركاء مزيفيين عبر الأنترنت (الإباحية). الاف من "الشركاء" الذي يتوقع الشباب أنهم سيظهروا أنفسهم عندما يشتهي اولائك الشباب. الكثير منا تعرف على الأفكار الجنسية وما نظن انه الحب عن طريق الإباحية. قد تم تحويل العلاقة الحميمة والناقية بين شريكين الى نسخةٍ مبسطةٍ و مليئة بالشهوات والقذارة، وهذه هي النسخة التي يتخذها الناس الأن على أنها الحق.  
 
 وهذا الأستحقاق ينتقل بشكل سيء الى العلاقات الجديد - ذلك لأن كل ما يريد العقل أن يفكر به هو اللحظة التي ستذهب مع شريكك الى الفراش. ولكن، مع تغيير رؤيتنا لمنظور الحب، ولأهمية العلاقات، يمكننا أن نجد الحب الحقيقي - ما وراء المتعة. 
