--- a/src/markdown/arabic/6. Neurology.md
+++ b/src/markdown/arabic/6. Neurology.md
@@ -1,53 +1,52 @@
-الإباحية ليست مرضاً من الناحية الشخصية. الإباحية سلوك تطوعي.
+الإباحية ليست مرضاً متعلق بالمرء. الإباحية سلوك تطوعي.
 
-قد تحاول ان تجادل هذه العبارة، ولكن، العقل يعمل بالإجابيات والسلبيات. ستستخدم الإباحية فقط إذا وجدت انه يوجد لها فائدة، و فقط إذا كانت هي الطريق الأكثر جاذبية في تلك اللحظة.
+قد تحاول ان تجادل هذه العبارة ، ولكن ، العقل يعمل بالإجابيات والسلبيات. ستَستَخدِم الإباحية فقط إذا ظننت انه يوجد لها فائدة ، و فقط إذا كانت هي الطريق الأكثر جاذبية.
 
-إذن، كيف يمكنك أن تتوقف من رؤية الفائدة في الإباحية؟ حسناً، الإباحية تقدم "المتعة" الفورية. وإذا كنت ترى الفائدة في "المتعة" الفورية، إذاً لماذا ينبغي عليك ترك الإباحية؟
+إذن ، كيف يمكنك أن تتوقف من رؤية الفائدة في الإباحية؟ حسناً ، الإباحية تقدم "المتعة" الفورية. وإذا كنت ترى الفائدة في "المتعة" الفورية ، إذاً لماذا ينبغي عليك ترك الإباحية؟
 
 
-المشكلة مع العادات والأنماط السلبية هو أنه لا يمكنك فقط اختيار العادة المدمرة التي تود أن تحتفظ بها. الجذر الذي يجب عليك ايجاده لتحرير نفسك من شيء واحد سيحررك أيضًا من الأشياء الاخرى. إذا طارد المرء المتعة ، وقام بإزالة الإباحية من حياته ، فستكون مجرد لعبة انتظار حتى يبحث عنها مرة أخرى. إذا طارد المرء الشعور أو العاطفة ، فسيشعر بأنه مؤهل وسيبحث عنها مرة أخرى.
+المشكلة مع العادات والأنماط السلبية هو أنه لا يمكنك اختيار العادة المدمرة التي تود أن تحتفظ بها. الجذر الذي يجب عليك ايجاده لتحرير نفسك من شيء واحد سيحررك أيضًا من الأشياء الاخرى. إذا طارد المرء المتعة ، وقام بإزالة الإباحية من حياته ، فستكون مجرد مسألة إنتظار حتى يبحث عنها مرة أخرى. إذا طارد المرء الشعور أو العاطفة ، فسيشعر بأنه مؤهل وسيبحث عنها مرة أخرى.
 
-الناس يشتهون المظهر ويشتهون المشاعر. اشتهاء المظهر هو الرغبة في أن تكون محبوبًا ، أو الرغبة في التفوق. اشتهاء المشاعر هو الرغبة في المتعة ، أو الرغبة في إتخاذ مخاطر غير صحية. هذه الأشياء هي الجذور الرئيسية للعادات والأنماط السلبية لدى الناس.
+الناس يشتهون المظهر ويشتهون المشاعر. اشتهاء المظهر هو الرغبة في أن تكون محبوبًا ، أو الرغبة في التفوق. اشتهاء المشاعر هو الرغبة في المتعة ، أو الرغبة في إتخاذ مخاطر بشكل مفرط. هذه الأشياء هي الجذور الرئيسية للعادات والأنماط السلبية لدى الناس.
 
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Neurosis" src="https://burgeonbook.org/md_images/neurosis.png" style="max-width:100%; max-height:450px"></div>
 
-لتنمو:
-- لمن اشتهى الحب - يجب أن يتعلم كيف يحب نفسه
-- لمن اشتهى العظمة - يجب أن يكون متواضعاً و أن يكون لديه إخلاص في النمو، وإلا سينقلب عليه طبعه المدمر
-- لمن اشتهى المتعة - يجب أن يفهم أن ما يشتهيه حقاً هو السلام و الحرية.
-- لمن اشتهى المخاطرة - يجب أن يكتشف قيمة نفسه. 
+لـــتـــنــمــو:
+- لمن اشتهى الــــحــــب - يجب أن يتعلم كيف يحب نفسه
+- لمن اشتهى العـظــمــة - يجب أن يكون متواضعاً و أن يكون لديه إخلاص في النمو، وإلا سينقلب عليه طبعه المدمر
+- لمن اشتهى المـــتــعــة - يجب أن يفهم أن ما يشتهيه حقاً هو السلام و الحرية.
+- لمن اشتهى المـخاطـرة - يجب أن يكتشف قيمة نفسه. 
 
-هذا هو اساس بناء العقل: ما يتمحور حوله المجتمع و الناس. ولكن، هذه الشهوات لديها تأثير تدميري على الأخرين، وعلى أنفسهم.  
+هذا هو أساس بناء العقل: الأساس الذي يتمحور حوله المجتمع و الناس. ولكن ، هذه الشهوات لديها تأثير تدميري على الأخرين، وعلى أنفسهم.  
 
-عادةً ما يشتهي الإنسان ويطارد الشهوات طول حياته. سوف يبني المرء صورة للكمال ، عن مثاليةٍ ما ، والتي سيكون كل شيء على ما يرام بها. كل ما يحتاجه هو الحصول على ما اراده. ومع ذلك ، كل ما تريده موجود هنا ، في هذه اللحظة. السلام ليس في المستقبل. ومع ذلك ، فإن مطاردة اللذة ، والرغبة في هذه الأشياء ، تصرف انتباه المرء عن السلام.
+عادةً ما يشتهي الإنسان ويطارد الشهوات طول حياته. سيقوم ببناء صورة للكمال ، عن مثاليةٍ ما ، والتي سيكون كل شيء على ما يرام بها. كل ما يحتاجه هو الحصول على ما يريده. ومع ذلك ، كل ما تريده موجود هــنــا ، في هذه اللحظة. السلام *ليس* في المستقبل. ومع ذلك ، فإن مطاردة اللذة والرغبة في هذه الأشياء تصرف انتباه المرء عن السلام.
 
 
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Void" src="https://burgeonbook.org/md_images/void.png" style="max-width:100%; max-height:230px"></div>
 
-الشهوة تجعل المرء يتجنب طرح الأسئلة المهمة. فهي تستهلك الوقت وتملأ العقل. ومع ذلك ، فإن الحقيقة هي أنه إذا توقف هؤلاء الذين يشتهون عن الإشتهاء ، فسيجب عليهم مواجهة حقيقة أنه ليس لديهم أي شيء آخر ذو مغزى في حياتهم. بسبب هذه المطاردة ، لم يسبق أن إتخذوا أي إجراءٍ ذو معنى في حياتهم. وأي إجراء ذو معنى ربما قد قاموا به، فهو قد تم نسيانه وضياعه مع مرور الوقت.
+الشهوة تجعل المرء متجنباً لطرح الأسئلة المهمة. فهي تستهلك الوقت وتملأ العقل. ومع ذلك ، فإن الحقيقة هي أنه إذا توقف هؤلاء الذين يشتهون عن الإشتهاء ، فسيجب عليهم مواجهة حقيقة أنه ليس لديهم أي شيء آخر ذو مغزى في حياتهم. وبسبب هذه المطاردة ، لم يسبق لهم وأن إتخذوا أي إجراءٍ ذو معنى في حياتهم. وأي إجراء ذو معنى ربما قد قاموا به، فهو قد تم نسيانه وضياعه مع مرور الوقت.
 
-**الحقيقة تؤلم، فيتجنبها العقل**
+**الحقيقة تــؤلــم، فيتجنبها العقل**
 
-لذلك السبب، لا يمكنك أن "تصلح" الجميع. لذلك السبب يوجد الجميع من الناس الذين سيظلون منشغلين بالعادات السيئة والأفعال المدمرة. إذا لم يكن المرء متامشي مع الحقيقة، أو لم يكن لديه التواضع اللازم ليتغير، فلن يحدث شيء. يمكنه قراءة جميع كتب "المعافاة من الإدمان" على وجه الأرض، ولن يقوموا بالتغير.
+لذلك السبب، لا يمكنك أن "تصلح" الجميع. لذلك السبب يوجد الجميع من الناس الذين سيظلون منشغلين بالعادات السيئة والأفعال المدمرة. إذا لم يكن المرء متامشي مع الحقيقة، أو لم يكن لديه التواضع اللازم ليتغير، فلن يحدث شيء. يمكنه قراءة جميع كتب "المعافاة من الإدمان" على وجه الأرض، ولن يقوم بالتغير.
  
 
-إذا لم ترد تضييع وقتك: لا تجبر الناس على التغير. أرشِدهُم الى الباب، ولكن دعهم يستخدمون المفتاح بأنفسهم. ولكن، لا تنظر بإستحقار للناس الذين يعيشون حياة مدمرة - وإلا ستضع نفسك فوق الأخرين، وستصبح رؤيتك مغيمة مرةً اخرى. إعطف بهم.
+إذا لم ترد تضييع وقتك: لا تجبر الناس على التغير. أرشِدهُم الى الباب، ولكن دعهم يستخدمون المفتاح بأنفسهم. ولا تنظر بإستحقار للناس الذين يعيشون حياة مدمرة - وإلا ستضع نفسك فوق الأخرين، وستصبح رؤيتك مغيمة مرةً اخرى. إعطف بهم.
   
 ## الخوف
  
- المشاعر هي نتيجة لتطور اجسادنا، ووظيفتها هي التنبوء بالتأثير المستقبلي لحدث حالي. في عصرنا الحالي، غالباً ما تكون مبالغ بها، او مخطئة بكل بساطة. هذا لا يعني أن مشاعرنا ليست مفيدة، ولكنها ليست مصدر جدير بالثقة للمعلومات. خاصةً إذا كانت هذا المشاعر كل ما يشغل عقلك. على سبيل المثال، الأفكار السالبية غالباً ما تربط نفسها بأي شيء. إذا كان الشخص يفكر بهذه الأفكار السلبية فقط، فسوف يعلق السلبية بكل شيء. حتى إذا لم تتغير الأشياء التي ينظرون اليها، فإن هذه الأفكار السلبية تسلب كل الوضوح منهم.   
+المشاعر هي جزء منا ، ووظيفتها هي التنبوء بالتأثير المستقبلي لحدث حالي. في هذا العصر، غالباً ما تكون مبالغ بها، او مخطئة بكل بساطة. هذا لا يعني أن مشاعرنا ليست مفيدة ، ولكنها ليست مصدر جدير بالثقة للمعلومات. خاصةً إذا كانت هذا المشاعر كل ما يشغل عقلك. على سبيل المثال ، الأفكار السالبية غالباً ما تربط نفسها بأي شيء. إذا كان الشخص يفكر بهذه الأفكار السلبية فقط ، فسوف يعلق السلبية بكل شيء. حتى وإذ كان ما يراه بسلبية لم يتغير مطلقاً،  ستسلب هذه الأفكار السلبية كل الوضوح منه.   
 
-الخوف هو الطاقة المدمرة في الأنسان. الخوف يذبل العقل، ويشوه الفكر. يؤدي الخوف إلى جميع أنواع النظريات الذكية بشكل فوق الطبيعي، والخرافات والعقائد والمعتقدات السخيفة.
+الخوف هو الطاقة المدمرة في الأنسان. الخوف يذبل العقل، ويشوه الفكر. يؤدي الخوف إلى جميع أنواع النظريات الغريبة بشكل فوق الطبيعي، والخرافات والعقائد والمعتقدات السخيفة.
  
-من السهل أن نقول "لا يجب عليك ان تخاف" او ما شابه من الأقاويل "المحفزة"، ولكن لا يقوم ذلك بفعل الكثير. الشيء الذي يحدث فرقاً هو إستيعاب أنك تخاف شيئاً غير موجود بعد، بل تخاف من شيء وانت قادر على التحكم به. لا تتجاهل قدرتك على أن تكون شخصاً منفرداً خلال هذا الخوف.
+من السهل أن نقول "لا يجب عليك بالخوف" او ما شابه من الأقاويل "المحفزة"، ولكن لا يقوم ذلك بفعل الكثير. الشيء الذي يحدث فارقاً هو إستيعاب أنك تخاف شيئاً غير موجود بعد، بل تخاف من شيء تحت تحكمك. لا تتجاهل قدرتك على أن تكون شخصاً منفرداً خلال هذا الخوف.
  
  
  إذا رأيت شخصاً عارياً بالخطأ، أو إذا رأيت الإباحية بالخطأ، فلن يقوم هذا بخلق تأثير سلبي للدوبامين. ولكن، البحث المستمر عن هذه الأشياء يخلق هذا التأثير. لا تحتاج أن تعيش في خوف من مشاهدة الأفلام أو المسلسلات التي يوجد بها اللقطات الجنسية. أو ان تكون خائفاً من أن يرسل اليك احد الحمقى شيئاً اباحياً. بالطبع، يمكنك أن تغير بيئتك حتى ترى هذه الاشياء بشكل نادر - ولكن، لا يجب عليك أن تخشاها. منظورك للأباحية هو ما يحدد قدرتها على التأثير عليك.
  
-"الجميع يفشل، إذا اليس من المحتمل ان افشل انا ايضاً؟". هذا ما يدعى بــ "دائرة الفشل". شخص واحد يفشل، ربما لأنه مفتقر للتواضع، ومن ثم يسمع الأخرون عن فشل هذا الشخص، ويبدؤن بالشك والشعور بالخوف من الفشل، ومن ثم، يفشلون حقاً. ثم يقومون بمشاركة فشلهم في اماكن عبر الانترنت، و من ثم يراها هؤلاء الناس و يبدأون بالشك ايضاً، و يحدث الأمر مراراً و تكراراً. فينتابهم الظن المخطئ بأن الأمر صعب، فيتحول هذا الظن الى واقع، و يصبح الأمرُ صعباً بالفعل.  
+قد يقول البعض: "الجميع يفشل، إذا اليس من المحتمل ان افشل انا ايضاً؟". هذا ما يدعى بــ "دائرة الفشل". شخص واحد يفشل، ربما لأنه مفتقر للتواضع، ومن ثم يسمع الأخرون عن فشل هذا الشخص، ويبدؤن بالشك والشعور بالخوف من الفشل، ومن ثم، يفشلون حقاً. ثم يقومون بمشاركة فشلهم في اماكن عبر الانترنت، و من ثم يراها هؤلاء الناس و يبدأون بالشك ايضاً، و يحدث الأمر مراراً و تكراراً. فينتابهم الظن المخطئ بأن الأمر صعب، فيتحول هذا الظن الى واقع، و يصبح الأمرُ صعباً بالفعل.  
 
 ولكن، عندما يقوم الشخص بإعادة تشكيل الطريقة التي ينظر اليها لإستخدام المواد الإباحية، وعندما يتوقف عن تخريب نفسه، فإنه لا يحتاج لأن يهتم بأمر اولئك الأخرين. **لكي تتقدم، يجب عليك أن تخاف على نفسك**.  
-
 
 من المحتمل أن تخاف فقدان حريتك بعد أن تجدها. ولكن يمكنك ان تطمئن إذا علمت انك الأن تسطيع القيام بما تشاء به في حياتك. طبعاً، يمكنك العودة الى تخريب نفسك من خلال الإباحية. ولكن، هل ستفعل ذلك؟ هل يوجد أي فائدة للـ "المتعة الفورية"؟ لا تحتاج الى الخوف من فقدان حريتك… فأنت الأن يمكنك القيام بما تريد.
  
@@ -58,11 +57,11 @@
 
  الكثير من معتقداتنا الخاطئة واوهامنا تعد أساسية، حيث تم خلقها من خلال طفولتنا، وقد عززها اباؤنا وجميع من يحاوطوننا. إذا لم نقم بتوعية نفسنا لهذه الأفكار، فسنصبح عبيداً للبيئة التي نعيش بها. هذه الأفكار قد تكون مثلاً: ( التفاعل مع الأخرين = التوبيخ، لذلك لا يجب علي التفاعل مع الأخرين) أو (لا شيء مما أقوم به يعد جيداً بما فيه الكفاية، فلن أقوم بعمل أي شيء) الخ...
  
-عندما نتقدم في السن ، نصبح مجموعةً من آلاف العادات التي تعمل باستمرار دون وعي. لدينا القليل من القوة الدماغية الإضافية في القشرة المخية لحل المشاكل الجديدة. فتصبح أنت عاداتك.
+عندما نتقدم في السن ، نصبح مجموعةً من آلاف العادات التي تعمل باستمرار دون وعي. ويصبح لدينا القليل من القوة الدماغية الإضافية في القشرة المخية لحل المشاكل الجديدة. فتصبح أنت عاداتك.
 
-ومع ذلك ، يمكنك تغيير هذه العادات والطريقة التي ينظر بها عقلك إلى العالم من خلال زيادة المرونة العصبية لديك. هذا يتطلب منك التواضع للتغيير والتشكيك في الأشياء ذاتها مثل ذاتك ونفسك ومعتقداتك الحالية وطريق اتجاه حياتك.
+ومع ذلك ، يمكنك تغيير تلك العادات والطريقة التي ينظر بها عقلك إلى العالم من خلال زيادة المرونة العصبية لديك. هذا يتطلب منك التواضع للتغيير والتشكيك في الأشياء ذاتها مثل ذاتك ونفسك ومعتقداتك الحالية وطريق اتجاه حياتك.
 
-"يجب عليك أن تهدأ قليلاً، و تجلس و تفكر في اساليبك. هل تتحرك عندما لا تريد الحركة؟ هل تغضب عندما لا تريد أن تغضب؟ يجب عليك إصلاح مشاكلك الشخصية، يجب عليك أنت تهتم بنفسك ولو قليلاً، وهذا ما يجعل الحياه أفضل بكثير جداً." - جاهسي
+"يجب عليك أن تهدأ قليلاً، و تجلس و تفكر في اساليبك. هل تتحرك عندما لا تريد الحركة؟ هل تغضب عندما لا تريد الغضب؟ يجب عليك إصلاح مشاكلك الشخصية ، يجب عليك أنت تهتم بنفسك ولو قليلاً ، وهذا ما سيجعل حياتك أفضل بكثير جداً." - جاهسي
 
 عندما نبذل جهدًا واعيًا للتغيير ، يمكن أن تتغير هذه المسارات. لكنه يتطلب الكثير من التواضع ويتطلب من المرء أن يخفض من غروره.
 
@@ -72,15 +71,14 @@
 
 لنفترض أنك تبدأ في "تطوير نفسك" الى أن تَصِل لصورتك المثالية؛ أنت الأن شخص إنتاجي، لم تعد تستخدم الإباحية، أصبحتَ ذو جسدٍ قوي، وأكتسبت ثقةً في نفسك. المشكلة هي، أنه بعد كل هذا "التطوير"، ما هو إتجاهك الأن؟ الأغلب لا يريدون أن يسألوا هذا السؤال لأنهم يفضلون أن يضيعوا الوقت عن طريق تكرير المحاولات الفاشلة لـ"تطوير انفسهم".  
 
-قولك لأنك تريد ان التحسن كقولك أن هناك شيء ما خاطئ بك حالياً؛ أنك لست مرضي بما فيه الكفاية. هذه الفكرة في ان المرء ليس مرضياً بعد تطارد "مطور النفس" لدرجة أنه يبدأ دائما بالشعور أنهم يخطئون التصويب للوصول لأنفسهم المثالية. ومن ثم، سيفشلون في التحسن، و سيستخدمون عاداتهم السيئة لمواكبة الألم الناتج عن الفشل، و من ثم يحدث نفس الأمر مراراً و تكراراً.
+قولك بأنك تريد التحسن كقولك أن هناك شيء ما خاطئ بك حالياً؛ أنك لست مُرضياً بما فيه الكفاية. هذه الفكرة في ان المرء ليس مرضياً بعد تُطارد "مطور النفس" لدرجة أنه يبدأ دائما بالشعور أنه يخطئ التصويب للوصول لنفسه المثالية. ومن ثم، سيفشل في التحسن، و سيستخدم عاداتهم السيئة لمواكبة الألم الناتج عن الفشل، و من ثم يحدث نفس الأمر مراراً و تكراراً.
   
-المفتاح، إذا أردت أن تكون نسخةً أفضل من نفسك، هو أن تصوب لأن تكون **جيدا**. ليس **مثالياً**.
+المفتاح هو انك إذا أردت أن تكون نسخةً أفضل من نفسك، يجب أن تحاول أن تكون **جيدا**، وليس **مثالياً**.
 
-و حتى بعد ذلك، يجب عليك التفكير في ما تهتم به بعد إنتهاء هذا التحسن. إذا لما تجاوب هذا السؤال، فكل ما ستقوم به فقط هو "التحسن". 
+وحتى بعد ذلك، يجب عليك التفكير في ما تهتم به بعد إنتهاء هذا التحسن. إذا لم تجاوب هذا السؤال، فكل ما ستقوم به فقط هو "التحسن". 
 
-من وجهة نظري؛ أنا لا "اطور نفسي"، بل أنني فقط امارس الحياة بطريقة أجِدُها الأكثر إرضائاً؛ الحياة الأكثر امتلائاً بالمخزى. مع أن الشهوة لا تقود الى السلام، ما زلت أجد الإرضاء و الرخاء في تحقيق الإنجازات و في إيجاد الحرية على مستويات مختلفة (الحرية المالية، الخ).
+من وجهة نظري؛ أنا لا "اطور نفسي"، بل أنني فقط امارس الحياة بطريقة أجِدُها الأكثر إرضائاً؛ الحياة الأكثر امتلائاً بالمعنى. مع أن الشهوة لا تقود الى السلام، ما زلت أجد الإرضاء و الرخاء في تحقيق الإنجازات و في إيجاد الحرية على مستويات مختلفة (الحرية المالية، الخ).
 
-على أي حال، معظم الناس الذين يقومون بـ"تطوير النفس" لا يمتلكون ادنى فكرة عن سبب ممارستهم لها. يريدون أن يكونوا أفضل. يريدون أن يجذبوا النساء. يريدون أن يكونوا أكثر ثقة بأنفسهم. ولكن، مع أن فكرة "تطوير النفس" مفيدة على المدة الطويل، إلا أن نتيجتها لؤلائك الناس مجرد متعة قصيرة المدى. فكر في أسباب إهتمامك في "تطوير النفس"، وستجد الكثير من الأشياء التي على الأرجح أن تمدك برؤيةٍ واضحة.  
+على أي حال، معظم الناس الذين يقومون بـ"تطوير النفس" لا يمتلكون ادنى فكرة عن سبب ممارستهم لها. يريدون أن يكونوا أفضل. يريدون أن يجذبوا النساء. يريدون أن يكونوا أكثر ثقة بأنفسهم. ولكن، مع أن فكرة "تطوير النفس" مفيدة على المدة الطويل، إلا أن نتيجتها لؤلائك الناس مجرد متعة قصيرة المدى. فكر في أسباب إهتمامك في "تطوير النفس"، وستجد الكثير من الأشياء التي ربما قد تمدك برؤيةٍ واضحة.  
 
-ما تدعوه بـ"الأنضباط الذاتي" - هو مجرد تعديل لبيئة لم نفهمها تمامًا بعد؛ لذلك ، في هذا التعديل ، يجب أن يكون هناك إنكار للذكاء. لماذا يجب على المرء أن يضبط نفسه؟ بدلاً من هذا التجنب ، هذا الصراع ، يمكن للمرء أن يفهم طبيعة ما يقوم بمعارضته. وبعد ذلك سيصبح العقل حراً.
-
+ما تدعوه بـ"الأنضباط الذاتي" - هو مجرد تعديل لبيئة لم نفهمها تمامًا بعد؛ لذلك ، في هذا التعديل ، يجب أن يكون هناك إنكار للذكاء. لماذا يجب على المرء أن يضبط نفسه؟ بدلاً من هذا التجنب والصراع ، يمكن للمرء أن يفهم طبيعة ما يقوم بصراعة. ومن ثم يصبح العقلُ حراً.
